// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/automatic-tokenization.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-disabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled ant-select-loading"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: loading"
          class="anticon anticon-loading"
        >
          <svg
            aria-hidden="true"
            class="anticon-spin"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/coordinate.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Zhejiang"
        >
          Zhejiang
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Hangzhou"
        >
          Hangzhou
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/custom-dropdown-menu.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/hide-selected.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Inserted are removed
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/label-in-value.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy (101)"
      >
        Lucy (101)
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/multiple.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Please select
      </div>
      <ul>
        <li
          class="ant-select-selection__choice"
          role="presentation"
          style="user-select:none;-webkit-user-select:none"
          title="a10"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            a10
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              aria-label="icon: close"
              class="anticon anticon-close ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-selection__choice"
          role="presentation"
          style="user-select:none;-webkit-user-select:none"
          title="c12"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            c12
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              aria-label="icon: close"
              class="anticon anticon-close ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/optgroup.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a person
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search-box.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled ant-select-no-arrow"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        input search text
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/select-users.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select users
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="a1"
        >
          a1
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/suffix.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: smile"
          class="anticon anticon-smile ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="smile"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 0 1 248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 0 1 249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 0 1 775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 0 1 775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 0 0-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 0 0-8-8.4z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-disabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: meh"
          class="anticon anticon-meh ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="meh"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 0 1 248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 0 1 249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 0 1 775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 0 1 775 775zM664 565H360c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h304c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/tags.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Tags Mode
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
